# neural-network

./: .gitignore  CMakeLists.txt
include/backend/: backend.hpp  cpu_backend.hpp  dml_backend.hpp  thread_pool.hpp
include/core/: dtype.hpp  serialization.hpp  shape.hpp  tensor.hpp
include/nn/: initialization.hpp  layer.hpp  lora.hpp  loss.hpp  quantization.hpp
include/optim/: dataloader.hpp  grad_scaler.hpp  lr_scheduler.hpp  optimizer.hpp  trainer.hpp
src/: main.cpp
src/backend/: cpu_backend.cpp  dml_backend.cpp  dml_backend_stub.cpp  thread_pool.cpp
src/core/: serialization.cpp  tensor.cpp
src/nn/: layer.cpp  lora.cpp  loss.cpp  quantization.cpp
src/optim/: dataloader.cpp  grad_scaler.cpp  lr_scheduler.cpp  optimizer.cpp  trainer.cpp
tests/backend/: dml_test.cpp  parallel_test.cpp
tests/core/: serialization_test.cpp  tensor_test.cpp
tests/nn/: gqa_test.cpp  layer_test.cpp  lora_test.cpp  quantization_test.cpp  rope_swiglu_test.cpp  transformer_test.cpp
tests/optim/: amp_test.cpp  optimizer_advanced_test.cpp  optimizer_test.cpp  pipeline_test.cpp
